--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.3"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.spitchenko.focusstart"
         minSdkVersion 14
@@ -20,8 +20,6 @@ android {
 }
 
 dependencies {
-    provided "org.projectlombok:lombok:1.16.14"
-    provided 'org.glassfish:javax.annotation:10.0-b28'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -30,5 +28,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    provided 'org.projectlombok:lombok:1.16.14'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
 }
