--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,27 +4,43 @@
 	xmlns:tools="http://schemas.android.com/tools">
 	
 	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	
 	<application
 		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
+        android:name="com.spitchenko.focusstart.FocusStartApplication"
+		android:icon="@drawable/ic_rss_feed_amber_50_36dp"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme"
 		tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-		<service android:name="com.spitchenko.focusstart.channel_window.RssChannelIntentService" />
-		<service android:name="com.spitchenko.focusstart.channel_window.RssChannelReadIntentService" />
-		<service android:name="com.spitchenko.focusstart.channel_iItem_window.RssChannelItemIntentService" />
-		<service android:name="com.spitchenko.focusstart.channel_iItem_window.RssChannelItemReadIntentService" />
+		<service android:name="com.spitchenko.focusstart.controller.RssChannelIntentService" />
+		<service android:name="com.spitchenko.focusstart.controller.RssChannelItemIntentService" />
 		
-		<activity android:name="com.spitchenko.focusstart.channel_window.ChannelActivity">
+		<activity
+			android:name="com.spitchenko.focusstart.userinterface.channelwindow.ChannelActivity"
+			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="com.spitchenko.focusstart.channel_iItem_window.ChannelItemActivity" />
+		<activity
+			android:name="com.spitchenko.focusstart.userinterface.channellitem.ChannelItemActivity"
+			android:theme="@style/AppTheme.NoActionBar" />
+		<activity
+			android:name="com.spitchenko.focusstart.userinterface.settingswindow.SettingsActivity"
+			android:theme="@style/AppTheme.NoActionBar" />
+
+        <receiver android:name="com.spitchenko.focusstart.controller.RefreshBroadcastReceiver"/>
+        <receiver android:name="com.spitchenko.focusstart.controller.OnBootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.PACKAGE_RESTARTED"/>
+                <action android:name="android.intent.action.PACKAGE_FIRST_LAUNCH"/>
+            </intent-filter>
+        </receiver>
 	</application>
 
 </manifest>
