--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
           package="com.spitchenko.focusstart">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
@@ -12,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Holo"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        android:fullBackupContent="@xml/backup_descriptor">
         <service android:name=".channelwindow.controller.RssChannelIntentService"/>
         <service android:name=".channelitemwindow.controller.RssChannelItemIntentService"/>
 
